istio/add-ambient-mode-namespace/.chainsaw-test/namespace-kube-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
