istio/add-ambient-mode-namespace/.chainsaw-test/patched-ns-alt.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    foo: bar
    istio.io/dataplane-mode: ambient
  name: istio-test-alt-ns
