istio/add-ambient-mode-namespace/.chainsaw-test/patched-ns-disabled.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
  name: istio-test-dis-ns
