istio/add-ambient-mode-namespace/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-ambient-mode-namespace
status:
  ready: true
