istio/add-ambient-mode-namespace/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-ambient-mode-namespace
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-ambient-mode-namespace.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - apply:
        file: chainsaw-step-02-apply-2.yaml
    - apply:
        file: chainsaw-step-02-apply-3.yaml
    - apply:
        file: chainsaw-step-02-apply-4.yaml
  - name: step-03
    try:
    - assert:
        file: patched-ns-alt.yaml
    - assert:
        file: patched-ns-disabled.yaml
    - assert:
        file: patched-ns-enabled.yaml
    - assert:
        file: patched-ns-none.yaml
  - name: step-04
    try:
    - apply:
        file: namespace-kube-system.yaml
    - apply:
        file: namespace-istio-system.yaml
  - name: step-05
    try:
    - assert:
        file: namespace-kube-system.yaml
    - assert:
        file: namespace-istio-system.yaml
